# Participants_race_results

./: .coverage  APPS_AND_TESTS_GUIDE.md  BACKEND_REORGANIZATION_SUMMARY.md  CI_CD_README.md  Jenkinsfile  README.md  RESTRUCTURE_SUMMARY.md  RaceResultsApp.spec  RaceResultsAppDev.spec  Single_person_results_w_top_results.py  best_results_3plus_or_realtiming_race.py  build_exe.py  build_exe_dev.py  build_exe_spec.py  excel_analysis.py  flask_app.py  main_web_app.py  person_search_web_app.py  pyproject.toml  requirements.txt  run_history.json  run_main_app.py  run_single_person_app.py  runner_results.json  setup.py  single_person_flask_app.py  test_best_results_helpers.py  test_project.py
.github/workflows/: automated-tests.yml  performance.yml  test.yml
Screenshots/הוראות/: הוראות שימוש באפליקציה.docx
backend/: __init__.py  excel_processor.py  person_results.py  race_analyzer.py  race_analyzer_new.py  race_result_engine.py  race_service.py  raceview_api.py  test_raceview_query.py  test_raceview_query_selenium.py
build_app/: RaceResultsAppDev.spec  RaceResultsAppOptimized.spec
config/: default_config.yaml  requirements-dev.txt
data/: run_history.json
docs/screenshots/הוראות/: הוראות שימוש באפליקציה.docx
excel/: 2026_01_22_22_40_46_באר_יעקב_best_results_10K_40-49.xlsx  2026_01_22_22_41_37_באר_יעקב_best_results_5K_40-49.xlsx  Boaz_Bilgory_תוצאות_ריצה.xlsx  בועז_בילגורי_תוצאות_ריצה.xlsx
scripts/: RUN_WORKING_TESTS.bat  run_tests.bat
src/core/: race_analyzer.py  single_person_analyzer.py
src/running_records/: __init__.py  config.py  exceptions.py
src/running_records/cli/: __init__.py  analyze.py  excel.py  main.py
src/running_records/core/: __init__.py  analyzer.py  exporter.py  filter.py  scraper.py
src/running_records/models/: __init__.py  participant.py  race.py  result.py
src/running_records/scrapers/: __init__.py  base.py  factory.py  modiin.py  realtiming.py  shvoong.py  threeplus.py
src/running_records/utils/: __init__.py  file_utils.py  normalization.py  time_utils.py  validation.py
src/scrapers/: __init__.py
src/web/: main_app.py  single_person_app.py
src/web/static/css/: styles.css
static/css/: single_person_styles.css  styles.css
templates/: index.html  single_person_index.html
tests/: .coverage  ALL_UPDATES_SUMMARY.md  BATCH_FILE_ENHANCEMENTS.md  FINAL_171_TO_192_FIXES.md  FINAL_TESTING_STATUS.md  JENKINS_BEST_PRACTICES_GUIDE.md  JENKINS_ERROR_HANDLING_GUIDE.md  JENKINS_PIPELINE_STRUCTURE.md  README_TESTING.md  REQUIREMENTS_ANALYSIS.md  RUN_TESTS_GUIDE.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_ORGANIZATION.md  TEST_COUNT_UPDATE_SUMMARY.md  __init__.py  conftest.py  pyest_commands_info.txt  pytest.ini  requirements-dev.txt  run_history.json  run_tests_professional.bat  test_3plus_scenario.py  test_best_results_helpers.py  test_edge_cases_integration.py  test_errorlevel.bat  test_integration_simple.py  test_project.py  test_race_analysis.py  test_race_analysis_fixed.py  test_sample_data_integration.py  test_simple_working.py  test_web_scraping_scenarios.py  tox.ini
tests/documents/: ALL_UPDATES_SUMMARY.md  BATCH_FILE_ENHANCEMENTS.md  FINAL_INTEGRATION_STATUS.md  IMPORT_FIXES_SUMMARY.md  JENKINS_PIPELINE_STRUCTURE.md  README_TESTING.md  RUN_TESTS_GUIDE.md  SAMPLE_DATA_INTEGRATION_SUMMARY.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_ORGANIZATION.md  TEST_COUNT_UPDATE_SUMMARY.md
tests/excel/: 2026_03_15_00_03_11_Test_best_results_10K_41-51.xlsx  2026_03_15_02_17_11_מודיעין_best_results_10K_40-49.xlsx  דני_כהן_תוצאות_ריצה.xlsx
tests/fixtures/: __init__.py  mock_responses.py  sample_data.py
tests/utils/: __init__.py  test_helpers.py
